--- a/public/style.css
+++ b/public/style.css
@@ -10,14 +10,21 @@ Typo : nom, taille, couleur
 Liens : pas de décoration
 */
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: Roboto, sans-serif;
   font-size: 1.3em;
+  color: #17271e;
+  max-width: 1700px;
 }
 
 a {
   text-decoration: none;
   /* pour enlever la mise en forme des liens */
+  color: #17271e;
+}
+
+li {
+  list-style-type: none;
 }
 
 button:hover {
@@ -25,7 +32,7 @@ button:hover {
   outline-style: none;
 }
 
-/* PAGE ACCUEIL */
+/* PAGE ACCUEIL __________________________________________________________________*/
 header {
   display: flex;
   justify-content: space-between;
@@ -90,26 +97,42 @@ header button {
   transform: translate(-50%, -50%);
 }
 
+.range h2 {
+  text-align: center;
+}
 .range__container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  background: #e5e3e3;
 }
 
 .card {
-  background: white;
-  width: 400px;
+  background: #c9c9c9;
+  border-radius: 15px;
+  width: 320px;
+  height: 300px;
   margin: 10px;
 }
 .card__img {
+  margin: auto;
+  padding-top: 20px;
   width: 90%;
-  height: 300px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 15px 15px 0 0;
+}
+.card__img img {
+  width: 100%;
+  border-radius: 15px 15px 0 0;
 }
 .card__content {
   width: 90%;
-  height: 100px;
+  margin: 0 auto;
+}
+.card__content h3 {
+  font-weight: 500;
+  margin: 5px 0;
 }
 
 footer {
@@ -122,6 +145,20 @@ footer ul {
   justify-content: center;
   align-items: center;
   height: 100px;
+  font-weight: 300;
+}
+footer li {
+  margin: 0 30px;
+}
+footer a {
+  color: white;
+}
+
+/* PAGE Camera0 __________________________________________________________________*/
+.camera0__options li {
+  display: none;
+  border: #17271e solid 1px;
+  width: 100px;
 }
 
 /*# sourceMappingURL=style.css.map */
