--- a/public/main.scss
+++ b/public/main.scss
@@ -49,6 +49,7 @@ button{
     font-size: 1em;
     border: none;
     transition: transform 200ms;
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);;
 
     }
 button:hover{
@@ -175,7 +176,6 @@ footer{
 .product{
     display: flex;
     justify-content: center;
-    margin: 0;
     &__img{
         width: 40%;
         margin: 20px;
@@ -191,17 +191,48 @@ footer{
         flex-direction: column;
         justify-content: space-around;
     }
+    & .options-disponibles{
+        height: 40px;
+        line-height: 30px;
+        position: relative;
+        cursor: pointer;
+
+    }
+    & .options-disponibles p{
+        margin: 0;
+        width: 200px;
+        height: 40px;
+        background: $color-background;
+        border-radius: 10px;
+        padding-left: 10px;
+        padding-top: 10px;
+        box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.3);;
+        transition: transform 200ms;
+    }
+    & .options-disponibles p:hover{
+        transform: scale(1.05);
+    }
     & .options{
+        overflow: hidden;
+        position: absolute;
+        top: 0px;
+        left: 230px;
+    }
+    & .option{
+        background: $color-background;
         display: flex;
         flex-direction: column;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         padding: 10px;
         border-radius: 10px;
+        overflow: hidden;
         visibility: hidden;
+        transform: translateY(-120px);
+        transition: visibility 400ms 200ms, transform 400ms;
     }
-    & .option:hover{
-        background: $color-tertiary;
-        color: white;
+    & .options-disponibles:hover .option{
+        transform: translate(0);
+        visibility: visible;
     }
     &__content button{
         width: 200px;
