--- a/public/main.scss
+++ b/public/main.scss
@@ -196,7 +196,6 @@ footer{
         line-height: 30px;
         position: relative;
         cursor: pointer;
-
     }
     & .options-disponibles p{
         margin: 0;
@@ -237,5 +236,57 @@ footer{
     &__content button{
         width: 200px;
         height: 40px;
+    }
+}
+/* PAGE panier __________________________________________________________________*/
+
+.panier__container{
+    width: 95%;
+    margin: auto;
+    background: $color-background;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+.camera{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background: #ffffff;
+    margin: 5px;
+    border-radius: 10px;
+    text-align: center;
+}
+.order-line{
+    width: 25%;
+}
+.panier__title, .panier__total{
+    width: 95%;
+    background: $color-background;
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    margin: 10px auto;
+    border-radius: 10px;
+    padding: 5px 10px;
+    font-weight: 500;
+
+    &  .title{
+        width: 25%;
+    }
+}
+.panier__total{
+    & .total{
+        width: 75%;
+        margin: auto auto;
+    }
+    & .somme{
+        width: 25%;
+        background: white;
+        border-radius: 10px;
+        margin: 5px 0;
     }
 }
