corrections : URL, gestions des options ds le localstorage en cours

--- a/public/main.scss
+++ b/public/main.scss
@@ -236,7 +236,16 @@ footer{
     &__content button{
         width: 200px;
         height: 40px;
+        margin-top: 20px;
     }
+    &__content span{
+        margin-top: 20px;
+    }
+    &__content select{
+        margin-top: 10px;
+        font-size: 0.9em;
+    }
+
 }
 /* PAGE panier __________________________________________________________________*/
 
