--- a/public/style.css
+++ b/public/style.css
@@ -314,4 +314,9 @@ footer a {
   margin: 20px auto;
 }
 
+.order {
+  text-align: center;
+  margin: 60px;
+}
+
 /*# sourceMappingURL=style.css.map */
