page confirmOrder, responsive, methode statique

--- a/public/scss/_pagePanier.scss
+++ b/public/scss/_pagePanier.scss
@@ -70,7 +70,7 @@
     &__container1 p{
         margin: 10px;
     }
-    & button{
+    & .button{
         width: 100%;
         line-height: 25px;
         padding: 10px;
