--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -5,7 +5,7 @@ $color-primary-soft: #f1e1c3;
 $color-secondary: #ad5b17;
 $color-tertiary: #1f3528;
 $color-text: #17271e;
-$color-background:  #c9c9c9;
+$color-background:  #e2e2e2;
 
 /* ________Typo________________________________________________________ */
 $typo-logo: 'Lobster', cursive;
