--- a/public/scss/_fondations.scss
+++ b/public/scss/_fondations.scss
@@ -18,12 +18,14 @@ a{
 li{
     list-style-type: none;
 }
-button:hover{ /* pour enlever le contour rouge qui apparait au clic sur les boutons */
+.button:hover{ /* pour enlever le contour rouge qui apparait au clic sur les boutons */
     outline-style: none;
     }
-button{
+.button{
     background: $color-secondary;
     border-radius: $border-radius;
+    padding: 5px 10px;
+    text-align: center;
     color: white;
     font-size: 1em;
     border: none;
@@ -31,6 +33,6 @@ button{
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);;
 
     }
-button:hover{
+.button:hover{
     transform: scale(1.05);
 }
