--- a/public/scss/_pageAccueil.scss
+++ b/public/scss/_pageAccueil.scss
@@ -10,10 +10,11 @@ header{
         color: $color-tertiary;
         margin-left: 20px;
     }
-    & button{
+    & a{
         width: 200px;
         height: 40px;
         margin-right: 20px;
+        
     }
 }
 
@@ -32,9 +33,9 @@ header{
         margin: 0;
         margin-left: 20px;
     }
-    & button{
+    & a{
         width: 200px;
-        height: 40px;
+        height: 30px;
         margin-right: 20px;
         z-index: 100;
         position: absolute;
