--- a/public/scss/_pageConfirmOrder.scss
+++ b/public/scss/_pageConfirmOrder.scss
@@ -1,4 +1,9 @@
 .order{
     text-align: center;
     margin: 60px;
+    background: $color-background;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: $box-shadow;
+
 }
