--- a/public/scss/_pagePanier.scss
+++ b/public/scss/_pagePanier.scss
@@ -79,4 +79,9 @@
         width: 320px;
         margin: 20px auto;
     }
+    & .error{
+        color: red;
+        font-size: 1em;
+    }
+    
 }
